fixed footer, now aligned

--- a/main_app/static/css/style.css
+++ b/main_app/static/css/style.css
@@ -7,12 +7,11 @@ body {
   
   main {
     /* flex: 1 0 auto; */
-    
+    height: 400px;
   }
   
-  footer.page-footer {
-    padding-top: 100px;
-    margin-right: 50px;
+  footer {
+    padding-top: 18rem;
     text-align: right;
   }
 
